code navbar continued
code navbar continued

--- a/Front-End-Social/src/components/Layouts/Header/NavBarInfo/NavBarInfo.css
+++ b/Front-End-Social/src/components/Layouts/Header/NavBarInfo/NavBarInfo.css
@@ -3,13 +3,58 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 5em;
-    background-color: rgba(33, 33, 33, 0.733)
+    height: 4.5em;
+    background-color: rgba(22, 30, 54, 0.747)
 }
 
+.navbar-info-left{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.navbar-info-right{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex: 2;
+}
+
+/* Symbol Navbar */
+.navbar-info-symbol{
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+}
+
+.navbar-info-symbol-logo{
+  width: 4.5em;
+  height: 4.5em;
+  background-color: lightcoral;
+}
+
+/* Title Navbar */
+.navbar-info-title{
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  margin-left: 2em;
+  margin-right: 2em;
+  font-size: 1.6em;
+  font-weight: bold;
+  color: white;
+}
 
 /* Form Search Navbar */
+.navbar-info-search{
+  flex: 1;
+}
+
 .navbar-search-form {
+  display: flex;
   outline: 0;
   float: left;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -21,10 +66,9 @@
 .navbar-search-form > .search-form-textbox {
   outline: 0;
   height: 42px;
-  width: 244px;
+  width: 400px;
   line-height: 42px;
   padding: 0 16px;
-  background-color: rgba(255, 255, 255, 0.8);
   color: #212121;
   border: 0;
   float: left;
@@ -61,4 +105,84 @@
 
 .navbar-search-form  > .search-form-button:hover {
   background-color: rgba(0, 150, 136, 0.8);
+}
+
+
+.search-form-button  > .search-form-button-ico{
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  top: 1em;
+  margin-left: -1.3em;
+  -webkit-border-radius: 0 4px 4px 0;
+  border-radius: 0 4px 4px 0;
+  filter: brightness(0) invert(1);
+}
+
+/* User Inf & Control */
+.user-inf{
+  display: flex;
+  flex: 1;
+  justify-content: center;
+
+}
+
+.user-control{
+  display: flex;
+  flex: 3;
+  justify-content: flex-end;
+}
+
+/* Button User Req */
+.btn-user-req, .btn-user-chat{
+  background: transparent;
+  border: none;
+}
+
+.btn-user-req:focus, .btn-user-chat:focus{
+  outline:0;
+}
+
+.btn-user-req img, .btn-user-chat img{
+  filter: brightness(0) invert(1);
+  height: 45px;
+  width: 45px;
+  margin-top: 0.5em;
+}
+
+/* User Inf Img */
+.user-inf-img{
+  display: flex;
+  align-items: center;
+}
+
+.user-inf-img img{
+  width: 42px;
+  height: 42px;
+  border-radius: 100%;
+  overflow: hidden;
+  max-width: unset;
+  margin-top: 0.1em;
+}
+
+.icon-status {
+  position: absolute;
+  border: 1px solid #3f4257;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  display: inline-block;
+  margin-top: -1em;
+}
+
+.icon-status.online {
+  background-color: #32e4cd;
+}
+
+
+/* Reponsive css */
+@media only screen and (max-width: 600px) {
+  body {
+      background-color: lightblue;
+  }
 }
