--- a/Front-End-Social/src/index.css
+++ b/Front-End-Social/src/index.css
@@ -6,4 +6,5 @@ body {
   font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #edf2f6;
 }
